<resources>
    <string name="app_name">BuyStuff</string>
    <string name="HelloWorld">Hello 401 World!</string>
    <string name="ProductName">Product Name</string>
    <string name="ProductCategory">Product Category</string>
    <string name="TestingText">I changed this in the code!</string>
    <string name="Submit">Submit</string>
    <string name="Submitted">Submitted!</string>
    <string name="OrderForm">Order Form</string>
    <string name="UserSettings">User Settings</string>
    <string name="Address">Address</string>
    <string name="Save">Save</string>
    <string name="SettingsSaved">Settings saved!</string>
    <string name="Nickname">Nickname</string>
    <string name="WelcomeUsername">Welcome %1$s!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignUp">Sign Up</string>
    <string name="LogOut">Log Out</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="DesiredUsername">Desired username</string>
    <string name="DesiredPassword">Desired password</string>
    <string name="VerifyEmail">Verify Email</string>
    <string name="EmailAddress">Email address</string>
    <string name="VerificationCode">Verification Code</string>
    <string name="VerificationCodeFromEmail">Verification code from email</string>
    <string name="LogIn">Log In</string>
    <string name="SelectImage">Select Image</string>
</resources>