<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpVerifyActivity">

    <TextView
        android:id="@+id/signUpVerifyTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/VerifyEmail"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameSignUpVerifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpVerifyTitleTextView" />

    <TextView
        android:id="@+id/verificationCodeSignUpVerifyTextView"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/VerificationCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUpVerifyTextView" />

    <EditText
        android:id="@+id/usernameSignUpVerifyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/EmailAddress"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/usernameSignUpVerifyTextView"
        app:layout_constraintTop_toBottomOf="@+id/signUpVerifyTitleTextView" />

    <EditText
        android:id="@+id/verificationCodeSignUpVerifyEditText"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/VerificationCodeFromEmail"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUpVerifyEditText" />

    <Button
        android:id="@+id/submitSignUpVerifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodeSignUpVerifyTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>