<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderFormActivity">

    <TextView
        android:id="@+id/orderFormTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/OrderForm"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productNameOrderFormTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFormTitleTextView"
        tools:text="Product name will go here" />

    <Button
        android:id="@+id/saveShoppingItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productCategoryTextView" />

    <TextView
        android:id="@+id/productCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/ProductCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameOrderFormTextView" />

    <Spinner
        android:id="@+id/productCategorySpinner"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/productCategoryTextView"
        app:layout_constraintTop_toBottomOf="@+id/productNameOrderFormTextView" />

    <ImageView
        android:id="@+id/shoppingItemImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/productNameOrderFormTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFormTitleTextView"
        app:layout_constraintVertical_bias="0.4"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>